General Master Screen

--- a/WinCorePatPranali/src/app/app-router/app-router.component.html
+++ b/WinCorePatPranali/src/app/app-router/app-router.component.html
@@ -904,7 +904,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a [class.mm-active]="isMenuSelected('general-master')" (click)="configClick('general-master')">
+                                    <a [class.mm-active]="isMenuSelected('master-list')" (click)="configClick('master-list')">
                                         <i class="metismenu-icon pe-7s-back-2"></i>
                                         General Master
                                     </a>
