General leadger, Deposit interest rates screens

--- a/WinCorePatPranali/src/app/app-router/app-router.component.html
+++ b/WinCorePatPranali/src/app/app-router/app-router.component.html
@@ -910,41 +910,24 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a [class.mm-active]="isMenuSelected('general-ledger-list')" (click)="configClick('general-ledger-list')">
                                         <i class="metismenu-icon pe-7s-note2"></i>
                                         General Ledger Master
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a [class.mm-active]="isMenuSelected('deposit-interest')" (click)="configClick('deposit-interest')">
                                         <i class="metismenu-icon pe-7s-note2"></i>
                                         Deposit Interest Rate Structure
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a [class.mm-active]="isMenuSelected('loan-interest')" (click)="configClick('loan-interest')">
                                         <i class="metismenu-icon pe-7s-note2"></i>
                                         Loan Internet Rate Structure
                                     </a>
                                 </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="metismenu-icon pe-7s-note2"></i>
-                                        Pigmy Agent Master
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="metismenu-icon pe-7s-note2"></i>
-                                        Pigmy Rate Master
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="metismenu-icon pe-7s-note2"></i>
-                                        Pigmy Commision Master
-                                    </a>
-                                </li>
+                               
                                 <li>
                                     <a href="#">
                                         <i class="metismenu-icon pe-7s-note2"></i>
