--- a/WinCorePatPranali/src/app/screens/masters/general-ledger-master/general-ledger-master-list/general-ledger-master-list.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/general-ledger-master/general-ledger-master-list/general-ledger-master-list.component.html
@@ -5,10 +5,10 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-6 position-relative">
-                        <h5 class="card-title">Banks</h5>
+                        <h5 class="card-title">General Ledger</h5>
                     </div>
                     <div class="col-md-6 position-relative">
-                        <button class="mt-1 btn btn-primary float-right" (click)="add('new-bank')">Add Bank</button>
+                        <button class="mt-1 btn btn-primary float-right" (click)="add('general-ledger')">Add General Ledger</button>
                     </div>
                 </div>
 
@@ -17,31 +17,30 @@
                         <tr>
                             <th width="5%">#</th>
                             <th width="20%">Name</th>
-                            <th width="20%">Address</th>
-                            <th width="20%">Has Branches</th>
-                            <th width="20%">General Ledger</th>
+                            <th width="20%">Group</th>
+                            <th width="20%">Type Of Account</th>
+                            <th width="20%">Interest Rate</th>
                             <th width="15%">Actions</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let uiBank of uiBanks| paginate: { itemsPerPage: 5, currentPage: p, totalItems: total }">
-                            <th scope="row">{{uiBank.id}}</th>
-                            <td>{{uiBank.name}}</td>
-                            <td>{{uiBank.address}}</td>
-                            <td>{{uiBank.hasBranchesYN}}</td>
-                            <td>{{uiBank.glId}}</td>
+                        <tr *ngFor="let uiGeneralLedger of uiGeneralLedgers| paginate: { itemsPerPage: 5, currentPage: p, totalItems: total }">
+                            <th scope="row">{{uiGeneralLedger.id}}</th>
+                            <td>{{uiGeneralLedger.name}}</td>
+                            <td>{{uiGeneralLedger.groupCode}}</td>
+                            <td>{{uiGeneralLedger.accountTypeId}}</td>
+                            <td>{{uiGeneralLedger.interestRate}}</td>
                             <td>
                                 <div class="widget-content-right">
                                     <button type="button" title="Edit record"
-                                        class="btn-shadow btn btn-info btn-actions" (click)="edit(uiBank)">
+                                        class="btn-shadow btn btn-info btn-actions" (click)="edit(uiGeneralLedger)">
                                         <span class="btn-icon-wrapper opacity-10">
                                             <i class="fa fa-edit fa-w-10"></i>
                                         </span>
                                     </button>
                                     <button type="button" title="Delete record"
                                         class="btn-shadow btn btn-danger btn-actions" data-toggle="modal"
-                                        data-target="#deleteModal">
-                                        <!--  data-toggle="modal" data-target="#deleteModal" (click)="delete(uiBank)"-->
+                                        data-target="#deleteModal" >
                                         <span class="btn-icon-wrapper opacity-10">
                                             <i class="fa fa-trash fa-w-20"></i>
                                         </span>
