--- a/WinCorePatPranali/src/app/screens/masters/general-master/general-master-form/general-master-form.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/general-master/general-master-form/general-master-form.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-12">
         <div class="main-card mb-3 card">
             <div class="card-body">
-                <form [formGroup]="priorityForm" #form="ngForm">
+                <form [formGroup]="generalMasterForm" #form="ngForm">
                     <h5 class="card-title">General Master</h5>
                     <div class="row">
                         <div class="col-md-6 position-relative">
