--- a/WinCorePatPranali/src/app/app-router/app-router.component.html
+++ b/WinCorePatPranali/src/app/app-router/app-router.component.html
@@ -936,9 +936,9 @@
                                 </li>
 
                                 <li>
-                                    <a href="#">
+                                    <a [class.mm-active]="isMenuSelected('gl-interest-parameters')" (click)="configClick('gl-interest-parameters')">
                                         <i class="metismenu-icon pe-7s-note2"></i>
-                                        Inerest Parameters for General Ledger 
+                                        Inerest Parameters for GL 
                                     </a>
                                 </li>
                                 <li>
