Changes related to edit screens

--- a/WinCorePatPranali/src/app/screens/masters/bank-master/bank-master-list/bank-master-list.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/bank-master/bank-master-list/bank-master-list.component.html
@@ -8,7 +8,7 @@
                         <h5 class="card-title">Banks</h5>
                     </div>
                     <div class="col-md-6 position-relative">
-                        <button class="mt-1 btn btn-primary float-right" (click)="add('new-bank')">Add Bank</button>
+                        <button class="mt-1 btn btn-primary float-right" (click)="add('bank')">Add Bank</button>
                     </div>
                 </div>
 
