--- a/WinCorePatPranali/src/app/screens/masters/priority/priority-list/priority-list.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/priority/priority-list/priority-list.component.html
@@ -8,7 +8,7 @@
                         <h5 class="card-title">Priorities</h5>
                     </div>
                     <div class="col-md-6 position-relative">
-                        <button class="mt-1 btn btn-primary float-right" (click)="add('new-priority')">Add Priority</button>
+                        <button class="mt-1 btn btn-primary float-right" (click)="add('priority')">Add Priority</button>
                     </div>
                 </div>
                 <table class="mb-0 table table-striped">
