--- a/WinCorePatPranali/src/app/app-router/app-router.component.html
+++ b/WinCorePatPranali/src/app/app-router/app-router.component.html
@@ -916,6 +916,12 @@
                                     </a>
                                 </li>
                                 <li>
+                                    <a [class.mm-active]="isMenuSelected('gl-interest-parameters')" (click)="configClick('gl-interest-parameters')">
+                                        <i class="metismenu-icon pe-7s-note2"></i>
+                                        General Ledger Interest Param..
+                                    </a>
+                                </li>
+                                <li>
                                     <a [class.mm-active]="isMenuSelected('deposit-interest')" (click)="configClick('deposit-interest')">
                                         <i class="metismenu-icon pe-7s-note2"></i>
                                         Deposit Interest Rate Structure
@@ -929,18 +935,13 @@
                                 </li>
                                
                                 <li>
-                                    <a href="#">
+                                    <a [class.mm-active]="isMenuSelected('profile')" (click)="configClick('profile')">
                                         <i class="metismenu-icon pe-7s-note2"></i>
                                         Bank Profile Master
                                     </a>
                                 </li>
 
-                                <li>
-                                    <a [class.mm-active]="isMenuSelected('gl-interest-parameters')" (click)="configClick('gl-interest-parameters')">
-                                        <i class="metismenu-icon pe-7s-note2"></i>
-                                        Inerest Parameters for GL 
-                                    </a>
-                                </li>
+                                
                                 <li>
                                     <a href="#">
                                         <i class="metismenu-icon pe-7s-note2"></i>
