--- a/WinCorePatPranali/src/app/screens/masters/branch-master/branch-master-list/branch-master-list.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/branch-master/branch-master-list/branch-master-list.component.html
@@ -8,7 +8,7 @@
                         <h5 class="card-title">Branches</h5>
                     </div>
                     <div class="col-md-6 position-relative">
-                        <button class="mt-1 btn btn-primary float-right" (click)="add('new-branch')">Add Branch</button>
+                        <button class="mt-1 btn btn-primary float-right" (click)="add('branch')">Add Branch</button>
                     </div>
                 </div>
                 <table class="mb-0 table table-striped">
