--- a/WinCorePatPranali/src/app/screens/masters/general-ledger-master/general-ledger-master-form/general-ledger-master-form.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/general-ledger-master/general-ledger-master-form/general-ledger-master-form.component.html
@@ -62,6 +62,7 @@
                         <div class="col-md-4 position-relative form-group">
                             <label class="">Balance</label>
                             <div class="input-group">
+                                <div class="input-group-prepend"><span class="input-group-text">₹</span></div>
                                 <input placeholder="0" readonly="true" tabindex="6" type="text"
                                     class="form-control" formControlName="balance">
                             </div>
@@ -88,6 +89,7 @@
                         <div class="col-md-4 position-relative form-group">
                             <label class="">Open Balance</label>
                             <div class="input-group">
+                                <div class="input-group-prepend"><span class="input-group-text">₹</span></div>
                                 <input placeholder="Open Balance" tabindex="9" type="text" class="form-control"
                                     required maxlength="10" formControlName="openBalance">
                                 <!-- [class.is-invalid]="openBalance.invalid && (openBalance.dirty || openBalance.touched)" -->
