Bank profile UI screen

--- a/WinCorePatPranali/src/app/app-router/app-router.component.html
+++ b/WinCorePatPranali/src/app/app-router/app-router.component.html
@@ -903,6 +903,13 @@
                                         Priority Master
                                     </a>
                                 </li>
+                                <!-- <li>
+                                    <a [class.mm-active]="isMenuSelected('priorities')" (click)="configClick('priorities')">
+                                        <i class="metismenu-icon pe-7s-next-2"></i>
+                                        District Master
+                                    </a>
+                                </li> -->
+
                                 <li>
                                     <a [class.mm-active]="isMenuSelected('master-list')" (click)="configClick('master-list')">
                                         <i class="metismenu-icon pe-7s-back-2"></i>
@@ -937,7 +944,7 @@
                                 <li>
                                     <a [class.mm-active]="isMenuSelected('profile')" (click)="configClick('profile')">
                                         <i class="metismenu-icon pe-7s-note2"></i>
-                                        Bank Profile Master
+                                        Branch Profile Master
                                     </a>
                                 </li>
 
