--- a/WinCorePatPranali/src/app/app-router/app-router.component.html
+++ b/WinCorePatPranali/src/app/app-router/app-router.component.html
@@ -887,19 +887,19 @@
                             <ul>
                                 <li>
                                     <a [class.mm-active]="isMenuSelected('banks')" (click)="configClick('banks')">
-                                        <i class="metismenu-icon pe-7s-add-user"></i>
+                                        <i class="metismenu-icon"></i>
                                         Bank Master
                                     </a>
                                 </li>
                                 <li>
                                     <a [class.mm-active]="isMenuSelected('branches')" (click)="configClick('branches')">
-                                        <i class="metismenu-icon pe-7s-plugin"></i>
+                                        <i class="metismenu-icon"></i>
                                         Branch Master
                                     </a>
                                 </li>
                                 <li>
                                     <a [class.mm-active]="isMenuSelected('priorities')" (click)="configClick('priorities')">
-                                        <i class="metismenu-icon pe-7s-next-2"></i>
+                                        <i class="metismenu-icon"></i>
                                         Priority Master
                                     </a>
                                 </li>
@@ -912,53 +912,39 @@
 
                                 <li>
                                     <a [class.mm-active]="isMenuSelected('master-list')" (click)="configClick('master-list')">
-                                        <i class="metismenu-icon pe-7s-back-2"></i>
+                                        <i class="metismenu-icon"></i>
                                         General Master
                                     </a>
                                 </li>
                                 <li>
                                     <a [class.mm-active]="isMenuSelected('general-ledger-list')" (click)="configClick('general-ledger-list')">
-                                        <i class="metismenu-icon pe-7s-note2"></i>
+                                        <i class="metismenu-icon"></i>
                                         General Ledger Master
                                     </a>
                                 </li>
                                 <li>
                                     <a [class.mm-active]="isMenuSelected('gl-interest-parameters')" (click)="configClick('gl-interest-parameters')">
-                                        <i class="metismenu-icon pe-7s-note2"></i>
-                                        General Ledger Interest Param..
+                                        <i class="metismenu-icon"></i>
+                                        General Ledger Interest Parameters
                                     </a>
                                 </li>
                                 <li>
                                     <a [class.mm-active]="isMenuSelected('deposit-interest')" (click)="configClick('deposit-interest')">
-                                        <i class="metismenu-icon pe-7s-note2"></i>
+                                        <i class="metismenu-icon"></i>
                                         Deposit Interest Rate Structure
                                     </a>
                                 </li>
                                 <li>
                                     <a [class.mm-active]="isMenuSelected('loan-interest')" (click)="configClick('loan-interest')">
-                                        <i class="metismenu-icon pe-7s-note2"></i>
+                                        <i class="metismenu-icon"></i>
                                         Loan Internet Rate Structure
                                     </a>
                                 </li>
                                
                                 <li>
                                     <a [class.mm-active]="isMenuSelected('profile')" (click)="configClick('profile')">
-                                        <i class="metismenu-icon pe-7s-note2"></i>
+                                        <i class="metismenu-icon"></i>
                                         Branch Profile Master
-                                    </a>
-                                </li>
-
-                                
-                                <li>
-                                    <a href="#">
-                                        <i class="metismenu-icon pe-7s-note2"></i>
-                                        NPA Master
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="metismenu-icon pe-7s-note2"></i>
-                                        Print
                                     </a>
                                 </li>
                             </ul>
