District Master screen

--- a/WinCorePatPranali/src/app/app-router/app-router.component.html
+++ b/WinCorePatPranali/src/app/app-router/app-router.component.html
@@ -903,12 +903,12 @@
                                         Priority Master
                                     </a>
                                 </li>
-                                <!-- <li>
-                                    <a [class.mm-active]="isMenuSelected('priorities')" (click)="configClick('priorities')">
+                                <li>
+                                    <a [class.mm-active]="isMenuSelected('districts')" (click)="configClick('districts')">
                                         <i class="metismenu-icon pe-7s-next-2"></i>
                                         District Master
                                     </a>
-                                </li> -->
+                                </li>
 
                                 <li>
                                     <a [class.mm-active]="isMenuSelected('master-list')" (click)="configClick('master-list')">
