--- a/WinCorePatPranali/src/app/screens/masters/branch-master/branch-master-form/branch-master-form.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/branch-master/branch-master-form/branch-master-form.component.html
@@ -139,7 +139,7 @@
                             </select>
                         </div>
                         <div class="col-md-6 position-relative">
-                            <label class="">Tahshil</label>
+                            <label class="">Tahsil</label>
                             <select class="mb-2 form-control" formControlName="tahshilId" tabindex="12"
                                 formControlName="tahshilId">
                                 <option *ngFor="let uiTahshil of uiTahshils" [ngValue]="uiTahshil.id">
