Deposit account screen

--- a/WinCorePatPranali/src/app/screens/masters/bank-profile-master/bank-profile-master.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/bank-profile-master/bank-profile-master.component.html
@@ -18,8 +18,8 @@
                         <label for="txtCode" class=""></label>
                     </div>
                 </div> -->
-
                 <ul class="body-tabs body-tabs-layout tabs-animated body-tabs-animated nav">
+                <!-- <ul class="nav nav-justified"> -->
                     <li class="nav-item">
                         <a role="tab" class="nav-link" id="tab-0" data-toggle="tab" href="#tab-content-0">
                             <span>General</span>
@@ -48,7 +48,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="tab-content">
-                                        <div class="divider" style="margin-top:0px !important"></div>
+                                        <!-- <div class="divider" style="margin-top:0px !important"></div> -->
                                         <div class="row">
                                             <div class="col-md-3 position-relative form-group">
                                                 <label for="txtCode" class="">Branch Code</label>
